did the changes to long ago to remember

--- a/utils/manifest.json
+++ b/utils/manifest.json
@@ -1,6 +1,7 @@
 {
   "name"      : "oj",
   "namespace" : "oj",
+  "source"    : "../",
 
   "excludes"  : ["*.DS_Store", "*.git", "*.gitignore", "*.svn"],
   "includes"  : [],
