lots of updates, mostly build/compile updates

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "dependencies_path" : "dependencies",
 
   "source_path" : "src",
-
+  "name": "oj",
   "packages" : {
     "oj" : {
       "assets" : ["*"],
